--- a/spark-log-viewer/pom.xml
+++ b/spark-log-viewer/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ranga</groupId>
-    <artifactId>spark-hbase-integration</artifactId>
+    <groupId>com.ranga.spark</groupId>
+    <artifactId>spark-log-viewer</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
@@ -15,10 +15,6 @@
         <spark.version>2.3.2</spark.version>
         <scala.version>2.11.12</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
-
-        <hbase.client.version>2.1.0</hbase.client.version>
-        <hbase-spark.version>1.0.0</hbase-spark.version>
-
     </properties>
 
     <dependencies>
@@ -38,29 +34,12 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>${hbase.client.version}</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.hortonworks.shc/shc-core -->
-        <dependency>
-            <groupId>com.hortonworks</groupId>
-            <artifactId>shc-core</artifactId>
-            <version>1.1.1-2.1-s_2.11</version>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.30</version>
         </dependency>
 
     </dependencies>
-
-    <repositories>
-
-        <!-- Hortonworks repository -->
-        <repository>
-            <id>public</id>
-            <url>http://repo.hortonworks.com/content/groups/public/</url>
-        </repository>
-
-    </repositories>
 
     <build>
         <plugins>
