Updating event info

--- a/spark-log-viewer/pom.xml
+++ b/spark-log-viewer/pom.xml
@@ -39,6 +39,12 @@
             <version>2.3.30</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+        </dependency>
+
     </dependencies>
 
     <build>
