Adding Spark1.6 project

--- a/spark-2.3/SparkAvro/pom.xml
+++ b/spark-2.3/SparkAvro/pom.xml
@@ -34,6 +34,12 @@
             <version>${spark.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql-kafka-0-10_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-avro -->
         <dependency>
             <groupId>com.databricks</groupId>
