--- a/SparkHBaseIntegration/pom.xml
+++ b/SparkHBaseIntegration/pom.xml
@@ -35,14 +35,15 @@
         <spark.version>2.4.3</spark.version>
         <spark.scope>provided</spark.scope>
 
-        <hbase.version>1.1.2</hbase.version>
+        <hbase.version>2.1.0</hbase.version>
         <hbase.scope>provided</hbase.scope>
-        <shc.version>1.1.1-2.1-s_2.11</shc.version>
+        <shc.version>1.1.3-2.4-s_2.11</shc.version>
         <shc.scope>compile</shc.scope>
         <hbase.spark.version>1.0.0</hbase.spark.version>
     </properties>
 
     <dependencies>
+
         <!-- spark -->
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -51,12 +52,8 @@
             <scope>${spark.scope}</scope>
             <exclusions>
                 <exclusion>
-                    <groupId>io.netty</groupId>
-                    <artifactId>netty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.scala-lang</groupId>
-                    <artifactId>scala-library</artifactId>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -66,6 +63,12 @@
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
             <scope>${spark.scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -73,9 +76,35 @@
             <artifactId>spark-streaming_${scala.binary.version}</artifactId>
             <version>${spark.version}</version>
             <scope>${spark.scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-client</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.7.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- hbase -->
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-server</artifactId>
+            <version>${hbase.version}</version>
+            <scope>${hbase.scope}</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-all</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
@@ -83,13 +112,25 @@
             <scope>${hbase.scope}</scope>
             <exclusions>
                 <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-auth</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-mapreduce-client-core</artifactId>
+                </exclusion>
+                <exclusion>
                     <groupId>io.netty</groupId>
-                    <artifactId>netty</artifactId>
+                    <artifactId>netty-all</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
 
-        <!-- shc core -->
+        <!-- shc core and hbase-spark -->
         <dependency>
             <groupId>com.hortonworks</groupId>
             <artifactId>shc-core</artifactId>
@@ -97,18 +138,11 @@
             <scope>${shc.scope}</scope>
         </dependency>
 
-        <!-- hbase-spark -->
         <dependency>
             <groupId>org.apache.hbase.connectors.spark</groupId>
             <artifactId>hbase-spark</artifactId>
             <version>${hbase.spark.version}</version>
-        </dependency>
-
-        <!-- netty -->
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.42.Final</version>
+            <scope>${shc.scope}</scope>
         </dependency>
 
         <!-- junit -->
@@ -137,12 +171,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- scala library -->
@@ -186,9 +222,18 @@
                     <scalaVersion>${scala.version}</scalaVersion>
                     <scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
                     <charset>${project.build.sourceEncoding}</charset>
+                    <recompileMode>incremental</recompileMode>
                     <args>
-                        <arg>-target:jvm-1.8</arg>
+                        <arg>-unchecked</arg>
+                        <arg>-deprecation</arg>
+                        <arg>-feature</arg>
                     </args>
+                    <javacArgs>
+                        <javacArg>-source</javacArg>
+                        <javacArg>1.8</javacArg>
+                        <javacArg>-target</javacArg>
+                        <javacArg>1.8</javacArg>
+                    </javacArgs>
                 </configuration>
             </plugin>
 
@@ -205,11 +250,21 @@
                         </goals>
 
                         <configuration>
+
+
                             <transformers>
                                 <!-- add Main-Class to manifest file -->
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.ranga.spark.hbase.SparkHBaseIntegrationApp</mainClass>
+                                </transformer>
+
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/</resource>
+                                </transformer>
+
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource> META-INF/services/org.apache.spark.sql.sources.DataSourceRegister</resource>
                                 </transformer>
                             </transformers>
 
