--- a/SparkHBaseIntegration/pom.xml
+++ b/SparkHBaseIntegration/pom.xml
@@ -32,14 +32,13 @@
         <junit.version>4.13.1</junit.version>
         <slf4j.version>1.7.21</slf4j.version>
 
-        <spark.version>2.4.3</spark.version>
+        <spark.version>2.3.2.3.1.5.0-152</spark.version>
         <spark.scope>provided</spark.scope>
 
-        <hbase.version>2.1.0</hbase.version>
-        <hbase.scope>provided</hbase.scope>
-        <shc.version>1.1.3-2.4-s_2.11</shc.version>
-        <shc.scope>compile</shc.scope>
-        <hbase.spark.version>1.0.0</hbase.spark.version>
+        <hbase.version>2.1.6.3.1.5.0-152</hbase.version>
+        <hbase.scope>compile</hbase.scope>
+        <hbase.spark.version>2.1.6.3.1.5.0-152</hbase.spark.version>
+
     </properties>
 
     <dependencies>
@@ -84,13 +83,6 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>2.7.6</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- hbase -->
         <dependency>
             <groupId>org.apache.hbase</groupId>
@@ -130,19 +122,11 @@
             </exclusions>
         </dependency>
 
-        <!-- shc core and hbase-spark -->
+        <!-- https://mvnrepository.com/artifact/org.apache.hbase/hbase-spark -->
         <dependency>
-            <groupId>com.hortonworks</groupId>
-            <artifactId>shc-core</artifactId>
-            <version>${shc.version}</version>
-            <scope>${shc.scope}</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hbase.connectors.spark</groupId>
+            <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-spark</artifactId>
             <version>${hbase.spark.version}</version>
-            <scope>${shc.scope}</scope>
         </dependency>
 
         <!-- junit -->
@@ -288,11 +272,30 @@
     </build>
 
     <repositories>
+
         <repository>
             <id>scala-tools.org</id>
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
+
+        <repository>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+            <id>HDPPublic</id>
+            <name>HDP Public</name>
+            <url>http://repo.hortonworks.com/content/repositories/public/</url>
+            <layout>default</layout>
+        </repository>
+
     </repositories>
 
 </project>
